--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 tokio = { version = "1.0", features = ["full", "signal"] }
-reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
+reqwest = { version = "0.11", features = ["json", "rustls-tls", "stream"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.9"
 serde_json = "1.0"
@@ -17,6 +17,7 @@ metrics = "0.21"
 metrics-exporter-prometheus = "0.12"
 async-trait = "0.1"
 futures = "0.3"
+futures-util = "0.3"
 tokio-rustls = "0.24"
 config = "0.13"
 rand = "0.8"
