--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,7 @@ backoff = { version = "0.4", features = ["tokio"] }
 hyper = { version = "1.0", features = ["full"] }
 axum = { version = "0.7", features = ["http2"] }
 tower = "0.4"
-tower-http = { version = "0.5", features = ["trace", "cors"] }
+tower-http = { version = "0.5", features = ["trace"] }
 http-body = "1.0"
 http-body-util = "0.1"
 bytes = "1.0"
